--- a/Word Analogy and Gender Debiasing.ipynb
+++ b/Word Analogy and Gender Debiasing.ipynb
@@ -248,7 +248,7 @@
    "source": [
     "Lets first see how the GloVe word embeddings relate to gender. You will first compute a vector $g = e_{woman}-e_{man}$, where $e_{woman}$ represents the word vector corresponding to the word *woman*, and $e_{man}$ corresponds to the word vector corresponding to the word *man*. The resulting vector $g$ roughly encodes the concept of \"gender\".\n",
     "\n",
-    "We compute  $g1 = e_{woman}-e_{man}$, $g_2 = e_{mother}-e_{father}$, $g_3 = e_{girl}-e_{boy}$ and average over them and call it $g$. Thus $g$ roughly represents the concept of \"gender\".\n"
+    "We compute  $g1 = e_{woman}-e_{man}$, $g_2 = e_{mother}-e_{father}$, $g_3 = e_{girl}-e_{boy}$ and average over them and call it $g$. Thus $g$ roughly represents the concept of \"female gender\".\n"
    ]
   },
   {
@@ -276,7 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now lets see how g compares with some masculine, feminine or profession related words. "
+    "Now lets see how $g$ compares with some masculine, feminine or profession related words. "
    ]
   },
   {
@@ -530,7 +530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And this way we achieve gender debiasing and equalization. We don't need to neutralization operation **neutralize** on the vector separately as the function **equalize** takes care of both."
+    "And this way we achieve gender debiasing and equalization. We don't need to perform the neutralization operation **neutralize** on the vector separately as the function **equalize** takes care of both."
    ]
   },
   {
